[FIX] timeline widget overflow issue BETA-56 [OPEN -> DONE]

--- a/BaCa2/assets/scss/_timeline.scss
+++ b/BaCa2/assets/scss/_timeline.scss
@@ -34,10 +34,14 @@
         margin-bottom: 1.5rem;
 
         .timeline-event-card {
-            max-height: 300px;
+            max-height: 270px;
 
             .card-title {
                 margin-bottom: 0;
+            }
+
+            .card-body {
+                overflow-y: auto;
             }
         }
     }
